--- a/SocialNetworksProject/app.json
+++ b/SocialNetworksProject/app.json
@@ -1,16 +1,16 @@
 {
   "expo": {
     "name": "SocialNetworksProject",
-    "description": "This project is really great.",
+    "description": "A very interesting project.",
     "slug": "SocialNetworksProject",
     "privacy": "public",
     "sdkVersion": "31.0.0",
     "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/images/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/images/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
