--- a/SocialNetworksProject/package.json
+++ b/SocialNetworksProject/package.json
@@ -22,5 +22,10 @@
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
     "jest-expo": "^31.0.0"
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
