--- a/SocialNetworksProject/package.json
+++ b/SocialNetworksProject/package.json
@@ -14,7 +14,10 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "axios": "^0.18.0",
     "expo": "^31.0.6",
+    "expo-app-auth": "^2.0.0",
+    "expo-background-fetch": "^1.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-navigation": "^2.18.3"
