--- a/SocialNetworksProject/package.json
+++ b/SocialNetworksProject/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "@expo/vector-icons": "^9.0.0",
     "axios": "^0.18.0",
     "expo": "^32.0.0",
     "expo-cli": "^2.6.14",
